[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/exporter.gd" type="Script" id=1]
[ext_resource path="res://Fonts/node_info_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/headline_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Sprites/node.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.109804, 0.109804, 0.109804, 1 )

[node name="saveUI" type="Node2D"]
script = ExtResource( 1 )

[node name="warning" type="AcceptDialog" parent="."]
margin_left = 384.488
margin_top = 233.796
margin_right = 610.488
margin_bottom = 291.796
dialog_text = "You need to give the maps name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_box" type="VBoxContainer" parent="."]
margin_left = 937.3
margin_top = 6.22452
margin_right = 1020.3
margin_bottom = 72.2245
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_name_label" type="Label" parent="save_box"]
margin_right = 86.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "Map Name"

[node name="map_name_input" type="LineEdit" parent="save_box"]
margin_top = 24.0
margin_right = 86.0
margin_bottom = 41.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 2 )
caret_blink = true
caret_blink_speed = 0.5

[node name="save_button" type="Button" parent="save_box"]
margin_top = 45.0
margin_right = 86.0
margin_bottom = 62.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 2 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hide_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="node" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 979.486, 37.6685 )
scale = Vector2( 46, 34 )
z_index = -1
texture = ExtResource( 4 )
[connection signal="pressed" from="save_box/save_button" to="." method="_on_save_button_pressed"]
[connection signal="timeout" from="hide_timer" to="." method="_on_hide_timer_timeout"]
